--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<button class="install-btn" onclick="window.location.href='next.html'" style="position: absolute; top: 1rem; right: 1rem;">Next Page</button>
 <style>
   body::before {
     content: "";
@@ -107,7 +106,12 @@
       </div>
     </div>
 
-
+<div class="game-card">
+            <div class="game-content">
+        <div class="game-title">The End Way Online</div>
+        <button class="install-btn" onclick="window.location.href='https://dl.patchkit.net/d/1meuwmrkyqia3yze24yij/direct'">Install</button>
+      </div>
+      
 
     <div class="game-card">
             <div class="game-content">
@@ -124,3 +128,6 @@
 </body>
 </html>
 <h1>By Keer</h1>
+  <footer style="margin-top: auto; padding: 1rem; text-align: center; color: #888;">
+    &copy; 2025 The End Way. All rights reserved.
+  </footer>
