--- a/index.html
+++ b/index.html
@@ -1,133 +1,38 @@
-<style>
-  body::before {
-    content: "";
-    position: fixed;
-    top: 0; left: 0; right: 0; bottom: 0;
-    z-index: -1;
-    background: radial-gradient(circle at 20% 30%, #00e0ff44 0%, transparent 70%),
-                radial-gradient(circle at 80% 70%, #00e0ff22 0%, transparent 80%);
-    animation: bgmove 10s linear infinite alternate;
-  }
-
-  @keyframes bgmove {
-    0% {
-      background-position: 20% 30%, 80% 70%;
-    }
-    100% {
-      background-position: 30% 40%, 70% 60%;
-    }
-  }
-</style>
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The End Way</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #111;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    header {
-      padding: 2rem;
-      font-size: 2.5rem;
-      font-weight: bold;
-      color: #00e0ff;
-    }
-
-    .games-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 2rem;
-      width: 90%;
-      max-width: 1200px;
-      margin-bottom: 4rem;
-    }
-
-    .game-card {
-      background-color: #222;
-      border-radius: 1rem;
-      overflow: hidden;
-      box-shadow: 0 0 15px rgba(0, 224, 255, 0.2);
-      transition: transform 0.3s;
-    }
-
-    .game-card:hover {
-      transform: scale(1.03);
-    }
-
-    .game-image {
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-    }
-
-    .game-content {
-      padding: 1rem;
-    }
-
-    .game-title {
-      font-size: 1.5rem;
-      margin-bottom: 0.5rem;
-      color: #00e0ff;
-    }
-
-    .install-btn {
-      background-color: #00e0ff;
-      color: #000;
-      border: none;
-      padding: 0.6rem 1.2rem;
-      border-radius: 0.5rem;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .install-btn:hover {
-      background-color: #00bcd4;
-    }
-  </style>
+  <link rel="stylesheet" href="assets/style.css" />
 </head>
 <body>
   <header>The End Way</header>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="nextplan.html">Next Plan</a>
+  </nav>
+
   <div class="games-container">
     <div class="game-card">
-            <div class="game-content">
-        <div class="game-title">The End Way 1</div>
-    
-        <button class="install-btn" onclick="window.location.href='https://dl.patchkit.net/d/62eju2ye4yracfywdbgat/direct'">Install</button>
-      </div>
+      <div class="game-title">The End Way 1</div>
+      <button class="install-btn" onclick="location.href='https://dl.patchkit.net/d/62eju2ye4yracfywdbgat/direct'">Install</button>
     </div>
 
-<div class="game-card">
-            <div class="game-content">
-        <div class="game-title">The End Way Online</div>
-        <button class="install-btn" onclick="window.location.href='https://dl.patchkit.net/d/1meuwmrkyqia3yze24yij/direct'">Install</button>
-      </div>
-      
+    <div class="game-card">
+      <div class="game-title">The End Way Online</div>
+      <button class="install-btn" onclick="location.href='https://dl.patchkit.net/d/1meuwmrkyqia3yze24yij/direct'">Install</button>
+    </div>
 
     <div class="game-card">
-            <div class="game-content">
-        <div class="game-title">The End Way 2</div>
-        <button class="install-btn" onclick="window.location.href='#'">Soon</button>
-      </div>
+      <div class="game-title">The End Way 2</div>
+      <button class="install-btn" disabled>Coming Soon</button>
     </div>
   </div>
 
-  <script>
-    // You can add interactivity or animations here
-    console.log("Welcome to The End Way");
-  </script>
+  <footer>&copy; 2025 The End Way. All rights reserved.</footer>
+  <script src="assets/script.js"></script>
 </body>
 </html>
-<h1>By Keer</h1>
-  <footer style="margin-top: auto; padding: 1rem; text-align: center; color: #888;">
-    &copy; 2025 The End Way. All rights reserved.
-  </footer>
+<link rel="stylesheet" type="text/css" href="style.css">
