--- a/index.html
+++ b/index.html
@@ -539,6 +539,13 @@
         </article>
 
         <article class="game-card">
+          <h3 class="game-title">The End Way 2D</h3>
+          <p class="game-description">Experience classic 2D gameplay with modern mechanics. A perfect blend of retro and contemporary gaming.</p>
+          <button class="install-btn" onclick="handleDownload(this, 'https://dl.patchkit.net/d/2ms5lpsgr949geg15jz0k/direct')" 
+                  aria-label="Download The End Way 2D game">Download Now</button>
+        </article>
+
+        <article class="game-card">
           <h3 class="game-title">The End Way 2</h3>
           <p class="game-description">The highly anticipated sequel is in development. New worlds, new challenges, new adventures.</p>
           <button class="install-btn" disabled aria-label="The End Way 2 is coming soon">Coming Soon</button>
@@ -792,7 +799,8 @@
     function preloadResources() {
       const links = [
         'https://dl.patchkit.net/d/62eju2ye4yracfywdbgat/direct',
-        'https://dl.patchkit.net/d/1meuwmrkyqia3yze24yij/direct'
+        'https://dl.patchkit.net/d/1meuwmrkyqia3yze24yij/direct',
+        'https://dl.patchkit.net/d/2ms5lpsgr949geg15jz0k/direct'
       ];
       
       links.forEach(url => {
