--- a/index.html
+++ b/index.html
@@ -550,6 +550,14 @@
           <p class="game-description">The highly anticipated sequel is in development. New worlds, new challenges, new adventures.</p>
           <button class="install-btn" disabled aria-label="The End Way 2 is coming soon">Coming Soon</button>
         </article>
+      
+              <article class="game-card">
+          <h3 class="game-title">The End Way 2 Online </h3>
+          <p class="game-description">Experience classic 2D gameplay with modern mechanics. A perfect blend of retro and contemporary gaming.</p>
+          <button class="install-btn" onclick="handleDownload(this, 'https://dl.patchkit.net/d/29gjbbi01sx470f3rls5u/direct')" 
+                  aria-label="Download The End Way 2D game">Download Now</button>
+        </article>
+        
       </div>
     </section>
 
